--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -43,131 +43,119 @@ concurrency:
   group: ${{github.workflow}}-${{github.event.pull_request.number||github.ref}}
 
 jobs:
-  test:
-    runs-on: windows-2022
+  # test:
+    # runs-on: windows-2022
+    # steps:
+    #   - name: Set up Python with caching of pip dependencies
+    #     uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
+    #     id: setup
+    #     with:
+    #       python-version: '3.12'
+
+    #   - name: Install
+    #     run: pip install py-cpuinfo
+
+    #   - continue-on-error: true
+    #     run: |
+    #       python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
+
+    #   - continue-on-error: true
+    #     shell: bash
+    #     run: |
+    #       python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
+
+    #   - continue-on-error: true
+    #     shell: python
+    #     run: |
+    #       import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))
+
+
+
+
+  find-changes:
+    name: Find changed files
+    uses: ./.github/workflows/reusable_find_changes.yaml
+    secrets: inherit
+
+  build-wheels:
+    # For efficiency, skip this workflow if there were no code file changes.
+    if: needs.find-changes.outputs.code || github.event_name == 'workflow_dispatch'
+    name: ${{matrix.conf.os}}/${{matrix.conf.pyarch}}/py3${{matrix.conf.py}}
+    needs: find-changes
+    runs-on: ${{matrix.conf.os}}
+    timeout-minutes: 20
+    strategy:
+      fail-fast: false
+      matrix:
+        # See the following page for a list of valid cibuildwheel arch values:
+        # https://cibuildwheel.pypa.io/en/stable/options/#archs
+        conf: [
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 10},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 11},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 12},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 13},
+
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 10},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 11},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 12},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 13},
+
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
+
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
+
+          {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 10},
+          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 11},
+          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 12},
+          # This fails with NumPy 1.x. TODO: uncomment when qsim supports np 2.
+          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 13},
+        ]
     steps:
+      - name: Check out a copy of the git repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          fetch-depth: 1
+
       - name: Set up Python with caching of pip dependencies
         uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         id: setup
         with:
-          python-version: '3.12'
+          python-version: '3.${{matrix.conf.py}}'
+          architecture: ${{matrix.conf.pyarch}}
+          cache: pip
+          cache-dependency-path: requirements.txt
 
-      - name: Install
-        run: pip install py-cpuinfo
+      - name: Set up Bazel with caching
+        uses: bazel-contrib/setup-bazel@8d2cb86a3680a820c3e219597279ce3f80d17a47 # 0.15.0
+        with:
+          disk-cache: ${{github.workflow}}
+          bazelisk-cache: true
+          external-cache: true
+          repository-cache: true
 
-      - continue-on-error: true
-        run: |
-          python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
+      - name: Install qsim dependencies
+        run: pip install -r requirements.txt
 
-      - continue-on-error: true
-        shell: bash
-        run: |
-          python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
+      - if: matrix.conf.os != 'windows-2022'
+        name: Run the build and test script (non-Windows case)
+        env:
+          # SHELLOPTS is used by Bash. Add xtrace when doing manual debug runs.
+          SHELLOPTS: ${{inputs.trace && 'xtrace' || '' }}
+        run: dev_tools/test_libs.sh --config=verbose
 
-      - continue-on-error: true
-        shell: python
-        run: |
-          import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))
-
-
-
-      # - continue-on-error: true
-      #   run: |
-      #     coreinfo64
-
-      # - continue-on-error: true
-      #   run: |
-      #     wmic cpu get Caption,InstructionSet /value
-
-      # - continue-on-error: true
-      #   run: |
-      #     wmic cpu get Caption /value
-
-
-  # find-changes:
-  #   name: Find changed files
-  #   uses: ./.github/workflows/reusable_find_changes.yaml
-  #   secrets: inherit
-
-  # build-wheels:
-  #   # For efficiency, skip this workflow if there were no code file changes.
-  #   if: needs.find-changes.outputs.code || github.event_name == 'workflow_dispatch'
-  #   name: ${{matrix.conf.os}}/${{matrix.conf.pyarch}}/py3${{matrix.conf.py}}
-  #   needs: find-changes
-  #   runs-on: ${{matrix.conf.os}}
-  #   timeout-minutes: 20
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       # See the following page for a list of valid cibuildwheel arch values:
-  #       # https://cibuildwheel.pypa.io/en/stable/options/#archs
-  #       conf: [
-  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 10},
-  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 11},
-  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 12},
-  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 13},
-
-  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 10},
-  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 11},
-  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 12},
-  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 13},
-
-  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
-  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
-  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
-  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
-
-  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
-  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
-  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
-  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
-
-  #         {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 10},
-  #         # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 11},
-  #         # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 12},
-  #         # This fails with NumPy 1.x. TODO: uncomment when qsim supports np 2.
-  #         # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 13},
-  #       ]
-  #   steps:
-      # - name: Check out a copy of the git repository
-      #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      #   with:
-      #     fetch-depth: 1
-
-      # - name: Set up Python with caching of pip dependencies
-      #   uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-      #   id: setup
-      #   with:
-      #     python-version: '3.${{matrix.conf.py}}'
-      #     architecture: ${{matrix.conf.pyarch}}
-      #     cache: pip
-      #     cache-dependency-path: requirements.txt
-
-      # - name: Set up Bazel with caching
-      #   uses: bazel-contrib/setup-bazel@8d2cb86a3680a820c3e219597279ce3f80d17a47 # 0.15.0
-      #   with:
-      #     disk-cache: ${{github.workflow}}
-      #     bazelisk-cache: true
-      #     external-cache: true
-      #     repository-cache: true
-
-      # - name: Install qsim dependencies
-      #   run: pip install -r requirements.txt
-
-      # - if: matrix.conf.os != 'windows-2022'
-      #   name: Run the build and test script (non-Windows case)
-      #   env:
-      #     # SHELLOPTS is used by Bash. Add xtrace when doing manual debug runs.
-      #     SHELLOPTS: ${{inputs.trace && 'xtrace' || '' }}
-      #   run: dev_tools/test_libs.sh --config=verbose
-
-      # - if: matrix.conf.os == 'windows-2022'
-      #   name: Run the build and test script (Windows)
-      #   env:
-      #     pyroot: 'C:\\hostedtoolcache\\windows\\Python'
-      #     pyexe: '${{steps.setup.outputs.python-version}}\\${{matrix.conf.pyarch}}\\python3.exe'
-      #     SHELLOPTS: ${{inputs.trace && 'xtrace' || '' }}
-      #   shell: cmd
-      #   run: >-
-      #     bash -x dev_tools/test_libs.sh --config=verbose
-      #     --action_env PYTHON_BIN_PATH=${{env.pyroot}}\\${{env.pyexe}}
+      - if: matrix.conf.os == 'windows-2022'
+        name: Run the build and test script (Windows)
+        env:
+          pyroot: 'C:\\hostedtoolcache\\windows\\Python'
+          pyexe: '${{steps.setup.outputs.python-version}}\\${{matrix.conf.pyarch}}\\python3.exe'
+          SHELLOPTS: ${{inputs.trace && 'xtrace' || '' }}
+        shell: cmd
+        run: >-
+          bash -x dev_tools/test_libs.sh --config=verbose
+          --action_env PYTHON_BIN_PATH=${{env.pyroot}}\\${{env.pyexe}}
