--- a/.bazelrc
+++ b/.bazelrc
@@ -20,8 +20,10 @@ common --experimental_repo_remote_exec
 common --verbose_failures
 
 # Default build options
-build --copt -std=c++17
-build --copt -D_GLIBCXX_USE_CXX11_ABI=1
+build --copt=-std=c++17
+build --copt=-D_GLIBCXX_USE_CXX11_ABI=1
+build --cxxopt=-std=c++17
+build --cxxopt=-D_GLIBCXX_USE_CXX11_ABI=1
 
 # Test flags
 test --test_output=errors
