--- a/.bazelrc
+++ b/.bazelrc
@@ -20,7 +20,7 @@ common --experimental_repo_remote_exec
 common --verbose_failures
 
 # Default build options
-build --copt=-std=c++17
+build --copt=/std:c++17
 build --copt=-D_GLIBCXX_USE_CXX11_ABI=1
 build --cxxopt=/std:c++17
 build --cxxopt=-D_GLIBCXX_USE_CXX11_ABI=1
