--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -62,6 +62,7 @@ jobs:
 
           - os: ubuntu-24.04
             arch: x86_64
+            skip: '*musllinux*'
 
           - os: windows-2022
             arch: AMD64
