--- a/.github/workflows/reusable_build_wheels.yaml
+++ b/.github/workflows/reusable_build_wheels.yaml
@@ -44,7 +44,7 @@ jobs:
   build-wheels:
     name: Build on ${{matrix.os}}/${{matrix.arch}}
     runs-on: ${{matrix.os}}
-    timeout-minutes: 45
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -97,17 +97,17 @@ jobs:
           echo MACOSX_DEPLOYMENT_TARGET=${os: -2} >> "$GITHUB_ENV"
 
       - if: startsWith(matrix.os, 'ubuntu')
-        name: Determine number of cores available in this Linux runner
-        run: echo "num_cores=$(nproc)" >> "$GITHUB_ENV"
+        name: Determine the number of threads to use (Linux)
+        run: echo "num_threads=$(( $(nproc) - 1 ))" >> "$GITHUB_ENV"
 
       - if: startsWith(matrix.os, 'macos')
-        name: Determine number of cores available in this MacOS runner
-        run: echo "num_cores=$(sysctl -n hw.ncpu)" >> "$GITHUB_ENV"
+        name: Determine the number of threads to use (MacOS)
+        run: echo "num_threads=$(( $(sysctl -n hw.ncpu) - 1 ))" >> "$GITHUB_ENV"
 
       - if: startsWith(matrix.os, 'win')
-        name: Determine number of cores available in this Windows runner
+        name: Determine the number of threads to use (Windows)
         shell: bash
-        run: echo "num_cores=$NUMBER_OF_PROCESSORS" >> "$GITHUB_ENV"
+        run: echo "num_threads=$(( NUMBER_OF_PROCESSORS - 1 ))" >> "$GITHUB_ENV"
 
       - name: Build and test wheels
         env:
@@ -118,7 +118,7 @@ jobs:
           CIBW_BUILD_VERBOSITY: ${{inputs.verbose && 1 || ''}}
           # Color codes make raw logs hard to read. (CLICOLOR is used by CMake.)
           CLICOLOR: ${{inputs.verbose && 0 || ''}}
-          CMAKE_BUILD_PARALLEL_LEVEL: ${{env.num_cores}}
+          CMAKE_BUILD_PARALLEL_LEVEL: ${{env.num_threads}}
         run: |
           cibuildwheel --output-dir wheelhouse
 
