Improve all the templates
Edit the text, add placeholders, shuffle the question order, and
basically overhaul all the templates.

--- a/.github/ISSUE_TEMPLATE/3-question.yml
+++ b/.github/ISSUE_TEMPLATE/3-question.yml
@@ -4,7 +4,7 @@ type: Question
 body:
   - type: markdown
     attributes:
-      value: |
+      value: >-
         Thank you for your interest in qsim! Before continuing, it's worth
         [searching through the existing issues in this
         repository](https://github.com/quantumlib/qsim/issues?q=is%3Aissue) in
@@ -16,15 +16,16 @@ body:
       description: >-
         Please provide enough details and contextual information so that the
         question is answerable.
+      placeholder: >-
+        Write your question here
     validations:
       required: true
 
   - type: input
     attributes:
       label: Does this concern a specific version of qsim? If so, what version?
-      description: >-
-        If the question involves specific features or operation of
-        qsim/qsimcirq, please let us know the version number.
+      placeholder: >-
+        Write the qsim version number here
     validations:
       required: false
 
@@ -36,5 +37,7 @@ body:
         tell us those details as well. It may matter, for example, whether you
         are using Linux, macOS, Windows, or Google Colab, as well as whether
         you are trying to use CUDA (and what version), and other details.
+      placeholder: >-
+        Describe the computing environment here
     validations:
       required: false
