--- a/.github/ISSUE_TEMPLATE/1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yml
@@ -4,65 +4,26 @@ type: Bug
 body:
   - type: markdown
     attributes:
-      value: |
-        Thank you for making the effort to open an issue report. Before
-        continuing, it's worth [searching through the existing issues in this
+      value: >-
+        Thank you for taking the time to open an issue report. Before
+        continuing, please [search the existing issues in this
         repository](https://github.com/quantumlib/qsim/issues?q=is%3Aissue) in
-        case the same issue has already been asked and possibly answered.
+        case the same topic has already been reported.
 
   - type: textarea
     attributes:
       label: Describe the issue
       description: >-
-        Please explain clearly and in detail what the issue is. How did you
-        encounter it? What were you trying to do?
+        Please explain clearly and in detail what the issue is. What were you
+        trying to do? What happened? What was unexpected about what happened?
+      placeholder: >-
+        Describe the issue here
     validations:
       required: true
 
-  - type: input
-    attributes:
-      label: Tell us the version of qsim or qsimcirq you are using
-      description: >-
-        If the problem involves a qsim/qsimcirq error or behavior, it is vital
-        that we know the version installed in your computing environment. This
-        can be determined in more than one way.
-
-        **In a terminal:**
-
-        If you are using the Python package (`qsimcirq`) and are running within
-        a terminal emulator, then typing the following command in the shell will
-        print the version number:
-
-        ```shell
-        python3 -c 'import qsimcirq; print(qsimcirq.__version__)'
-        ```
-
-        **In a Colab or Jupyter notebook:**
-
-        If you are using the `qsimcirq` package in a Google Colab or Jupyter
-        notebook, then running the following command will print the version
-        number:
-
-        ```python
-        import qsimcirq; print(qsimcirq.__version__)
-        ```
-    validations:
-      required: false
-
-  - type: input
-    attributes:
-      label: Tell us about the computing environment you are using
-      description: >-
-        To investigate the cause of the problem, we will also need to know the
-        computing environment you are using. Please tell us if you are using
-        Linux, macOS, Windows, Google Colab, or something else. If it is a
-        Linux/Mac/Windows environment, please also tell us its version.
-    validations:
-      required: false
-
   - type: textarea
     attributes:
-      label: Tell us how the issue can be reproduced
+      label: Tell us how to reproduce the issue
       description: >-
         Explain in a step-by-step fashion what someone else will need to
         do in order to reproduce the issue. If possible, include literal
@@ -71,9 +32,36 @@ body:
         For long output, paste the text into [collapsed
         sections](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/organizing-information-with-collapsed-sections)
         or attach text files.
-      placeholder: |
-        1. …
-        2. …
-        3. …
+      placeholder: >-
+        Write a step-by-step explanation of how to reproduce the issue here
+    validations:
+      required: false
+
+  - type: input
+    attributes:
+      label: Tell us the version of qsim or qsimcirq (if relevant)
+      description: |-
+        For qsim software problems, we need to know the exact version you are
+        using. If you are using the Python package and are running within a
+        terminal emulator, then typing the following command in the shell will
+        print the version number:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        `python3 -c 'import qsimcirq; print(qsimcirq.__version__)'`<br>
+        If you are using a Google Colab or Jupyter notebook environment,
+        then running the following command in a notebook cell will print
+        the version number:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        `import qsimcirq; print(qsimcirq.__version__)`
+      placeholder: >-
+        Write the qsim version number here
+    validations:
+      required: false
+
+  - type: input
+    attributes:
+      label: Tell us the computing environment (if relevant)
+      description: >-
+        Please tell us if you are using Linux, macOS, Windows, Google Colab, or
+        something else, and its version.
+      placeholder: >-
+        Describe the computing environment and its version here
     validations:
       required: false
