--- a/.github/ISSUE_TEMPLATE/2-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature-request.yml
@@ -4,16 +4,22 @@ type: Enhancement
 body:
   - type: markdown
     attributes:
-      value: |
-        Thank you for taking the time to fill out this feature request form!
+      value: >-
+        Thank you for your interest in qsim! Before continuing, it's worth
+        [searching through the existing issues in this
+        repository](https://github.com/quantumlib/qsim/issues?q=is%3Aissue) in
+        case the same feature has already been requested.
 
   - type: textarea
     attributes:
-      label: Is your feature request related to a use case or problem?
+      label: What is your feature request?
       description: >-
-        Please tell us the context of your request. Is it to help you do
-        something that you currently cannot due to limitations in qsim, or is it
-        an idea for an enhancement or new functionality, or something else?
+        Please describe the request and its context in detail. Is the feature
+        something that would help you do something that you currently cannot due
+        to limitations in qsim, or is it an idea for an enhancement or new
+        functionality, or something else?
+      placeholder: >-
+        Describe the feature request here
     validations:
       required: true
 
@@ -24,6 +30,8 @@ body:
         If you have ideas or preferences for the solution, you can let us know
         here. If you are aware of other similar or related work, please let us
         know about it here.
+      placeholder: >-
+        Describe your proposed solution here
     validations:
       required: false
 
@@ -34,7 +42,7 @@ body:
         Please choose from among the following options. If the lack of this
         feature is blocking important work, please choose from among P0–P2.
       options:
-        - P0 – needed no later than a week
+        - P0 – needed within two weeks
         - P1 – needed by the next release
         - P2 – needed within two quarters
         - P3 – not blocked; it's an idea
