Configure cibuildwheel to allow prerelease Python versions
This allows us to test with Python 3.14.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@
 [tool.cibuildwheel]
 test-extras = "dev"
 dependency-versions = "latest"
+enable = ["cpython-prerelease"]
+environment.PIP_PREFER_BINARY = "1"
 # Due to package & module name conflict, temporarily move it away to run tests:
 before-test = "mv {package}/qsimcirq /tmp"
 test-command = "pytest -s -v {package}/qsimcirq_tests/qsimcirq_test.py && mv /tmp/qsimcirq {package}"
