--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -289,7 +289,7 @@ jobs:
 
   library-tests:
     if: needs.code-changes.outputs.changed == 'true'
-    name: Library tests on ${{matrix.os}}/${{matrix.pyarch}}
+    name: Library tests on ${{matrix.os}} + Py ${{matrix.py_ver}}
     needs: code-changes
     runs-on: ${{matrix.os}}
     continue-on-error: true
@@ -299,28 +299,28 @@ jobs:
       matrix:
         # It's not worth testing every single Python version here, so this only
         # tests the endpoints of the supported range. The wheel build process
-        # (in a separate workflow) *does* test all the versions.
+        # (in a separate workflow) *does* use all the versions.
         include: [
-          {os: ubuntu-24.04, pyarch: x64, pyversion: '3.10'},
-          {os: ubuntu-24.04, pyarch: x64, pyversion: '3.14'},
+          {os: ubuntu-24.04,     py_ver: '3.10'},
+          {os: ubuntu-24.04,     py_ver: '3.13'},
 
-          {os: ubuntu-24.04-arm, pyarch: arm64, pyversion: '3.10'},
-          {os: ubuntu-24.04-arm, pyarch: arm64, pyversion: '3.14'},
+          {os: ubuntu-24.04-arm, py_ver: '3.10'},
+          {os: ubuntu-24.04-arm, py_ver: '3.13'},
 
-          {os: macos-14, pyarch: arm64, pyversion: '3.10'},
-          {os: macos-14, pyarch: arm64, pyversion: '3.14'},
+          {os: macos-14,         py_ver: '3.10'},
+          {os: macos-14,         py_ver: '3.13'},
 
-          {os: macos-15, pyarch: arm64, pyversion: '3.10'},
-          {os: macos-15, pyarch: arm64, pyversion: '3.14'},
+          {os: macos-15,         py_ver: '3.10'},
+          {os: macos-15,         py_ver: '3.13'},
 
-          {os: macos-15-intel, pyarch: x64, pyversion: '3.10'},
-          {os: macos-15-intel, pyarch: x64, pyversion: '3.14'},
+          {os: macos-15-intel,   py_ver: '3.10'},
+          {os: macos-15-intel,   py_ver: '3.13'},
 
-          {os: macos-26, pyarch: arm64, pyversion: '3.10'},
-          {os: macos-26, pyarch: arm64, pyversion: '3.14'},
+          {os: macos-26,         py_ver: '3.10'},
+          {os: macos-26,         py_ver: '3.13'},
 
-          {os: windows-2025, pyarch: x64, pyversion: '3.10'},
-          {os: windows-2025, pyarch: x64, pyversion: '3.14'},
+          {os: windows-2025,     py_ver: '3.10'},
+          {os: windows-2025,     py_ver: '3.13'},
         ]
     steps:
       - name: Check out a copy of the git repository
@@ -332,8 +332,7 @@ jobs:
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v5
         id: setup
         with:
-          python-version: ${{matrix.pyversion}}
-          architecture: ${{matrix.pyarch}}
+          python-version: ${{matrix.py_ver}}
           cache: pip
           cache-dependency-path: |
             requirements.txt
@@ -349,12 +348,6 @@ jobs:
           debug: ${{inputs.debug}}
         uses: './.github/actions/set-up-bazelisk'
 
-      - if: startsWith(matrix.os, 'macos')
-        name: Set CMake MACOSX_DEPLOYMENT_TARGET value on MacOS
-        run: |
-          os=${{matrix.os}}
-          echo MACOSX_DEPLOYMENT_TARGET=${os: -2} >> "$GITHUB_ENV"
-
       - if: matrix.os != 'windows-2025'
         name: Build the qsim library and run tests (non-Windows case)
         run: |
@@ -368,10 +361,9 @@ jobs:
         # to use. Here we do that by setting PYTHON_BIN_PATH.
         env:
           root: 'C:\\hostedtoolcache\\windows\\Python'
-          ver: '${{steps.setup.outputs.python-version}}'
-          exe: '${{matrix.pyarch}}\\python3.exe'
+          exe: '${{steps.setup.outputs.python-version}}\\x64\\python3.exe'
         shell: cmd
-        run: bash -x dev_tools/test_libs.sh ${{inputs.debug && '--config=verbose'}} --action_env PYTHON_BIN_PATH=${{env.root}}\\${{env.ver}}\\${{env.exe}}
+        run: bash -x dev_tools/test_libs.sh ${{inputs.debug && '--config=verbose'}} --action_env PYTHON_BIN_PATH=${{env.root}}\\${{env.exe}}
 
       - name: Run Python tests
         shell: bash
