--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -289,7 +289,7 @@ jobs:
 
   library-tests:
     if: needs.code-changes.outputs.changed == 'true'
-    name: Library tests on ${{matrix.os}} + Py ${{matrix.py_ver}}
+    name: Library tests on ${{matrix.os}} + Py ${{matrix.python_version}}
     needs: code-changes
     runs-on: ${{matrix.os}}
     continue-on-error: true
@@ -300,28 +300,16 @@ jobs:
         # It's not worth testing every single Python version here, so this only
         # tests the endpoints of the supported range. The wheel build process
         # (in a separate workflow) *does* use all the versions.
-        include: [
-          {os: ubuntu-24.04,     py_ver: '3.10'},
-          {os: ubuntu-24.04,     py_ver: '3.13'},
-
-          {os: ubuntu-24.04-arm, py_ver: '3.10'},
-          {os: ubuntu-24.04-arm, py_ver: '3.13'},
-
-          {os: macos-14,         py_ver: '3.10'},
-          {os: macos-14,         py_ver: '3.13'},
-
-          {os: macos-15,         py_ver: '3.10'},
-          {os: macos-15,         py_ver: '3.13'},
-
-          {os: macos-15-intel,   py_ver: '3.10'},
-          {os: macos-15-intel,   py_ver: '3.13'},
-
-          {os: macos-26,         py_ver: '3.10'},
-          {os: macos-26,         py_ver: '3.13'},
-
-          {os: windows-2025,     py_ver: '3.10'},
-          {os: windows-2025,     py_ver: '3.13'},
-        ]
+        os:
+          - ubuntu-24.04
+          - ubuntu-24.04-arm
+          - macos-14
+          - macos-15
+          - macos-15-intel
+          - windows-2025
+        python_version:
+          - '3.10'
+          - '3.13'
     steps:
       - name: Check out a copy of the git repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -332,7 +320,7 @@ jobs:
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v5
         id: setup
         with:
-          python-version: ${{matrix.py_ver}}
+          python-version: ${{matrix.python_version}}
           cache: pip
           cache-dependency-path: |
             requirements.txt
