--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -240,7 +240,7 @@ jobs:
         uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
         with:
           base_sha: ${{inputs.base_sha}}
-          files: .github/**/*.{yaml,yml}
+          files: .github/workflows/*.{yaml,yml}
 
       - name: Run actionlint
         if: steps.changes.outputs.any_changed == 'true'
